--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,5 +1,5 @@
-USER="gmanager"
-PASSWORD="HEQxc5jE2Kexe7"
-SERVER="adm.gsoft.com.br"
-DATABASE="GMANAGERbkp"
-PORT=8080
+USER=""
+PASSWORD=""
+SERVER=""
+DATABASE=""
+PORT=
