--- a/backend/.env-example
+++ b/backend/.env-example
@@ -3,3 +3,7 @@ PASSWORD=""
 SERVER=""
 DATABASE=""
 PORT=8080
+AWS_BUCKET_NAME = ""
+AWS_BUCKET_REGION = ""
+AWS_ACCESS_KEY = ""
+AWS_SECRET_KEY = ""
